Fixed dark mode view.

--- a/src/styles.css
+++ b/src/styles.css
@@ -485,6 +485,10 @@ html {
         background-color: #ccc
     }
 
+    .flagged-dark{
+        background-color: #444;
+    }
+
 
     .hidden { 
         opacity: 0;
@@ -507,7 +511,7 @@ html {
 
     .light-right{
         transition: all 0.1s ease-in;
-        background-color: #444 !important;
+        background-color: #ccc !important;
         border: 1px #ccc solid;
     }
 
